# numerai-strategy-pipeline

./: FINANCIAL_VESSELS_VISION_GAP.md  build.sh  deps.edn  ecosystem-state.json  index.html  manifest.json  migrate_numerai_pipeline.py  project.clj  server.js  simple-server.py  start_strategy_api.sh  strategy-api-integration.js  strategy.db  strategy_api.py
.claude/: claude_router.sh  config.json  router.py
claude-router-ui/: api.py  index.html  main.clj  start.sh
numerai-pipeline/: .coverage.vmi2065296.contaboserver.net.2543883.XLhZkxFx  .gitignore  COMPREHENSIVE_GAP_ANALYSIS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  ENVISIONED_TEST_SUITES.md  GAPS_ANALYSIS.md  NEXT_SMART_GOALSET.md  README.md  backup_rollback.sh  coverage.xml  deploy_pipeline.sh  deployment_info.json  distributed_ml_integration.py  mesh_deployment.py  mesh_deployment_info.json  mesh_network_config.json  migration_info.json  model_uprootiny.py  nginx_config.conf  polyglot_features.py  pyproject.toml  requirements.txt  robust_pipeline.py  run_tests.sh  service_discovery.json  simple_deploy.sh  simple_mesh.py  start_numerai_pipeline.sh
numerai-pipeline/.claude/: numerai.json
numerai-pipeline/analytics/: analyze_uprootiny.py
numerai-pipeline/backups/: analytics_result_20250906_232302.json  analytics_result_20250907_014721.json  indexing_status_20250906_133627.json  indexing_status_20250906_232332.json  ml_predictions_20250906_234336.json  ml_predictions_20250907_014430.json  ml_predictions_20250907_014730.json  pipeline_results_20250906_133627.json  pipeline_results_20250906_140119.json  pipeline_results_20250906_231908.json  pipeline_results_20250906_232302.json  pipeline_results_20250906_232332.json  pipeline_results_20250906_234336.json  pipeline_results_20250907_014730.json
numerai-pipeline/backups/state_backups/: full_state_20250906_140705.json
numerai-pipeline/indexing/: __init__.py  index_engine.py
numerai-pipeline/logs/: submission_log_450.json  submission_log_451.json
numerai-pipeline/mesh_nodes/: deploy_coordinator-001.py  deploy_feature-worker-001.py  deploy_feature-worker-002.py  deploy_ml-worker-001.py  deploy_ml-worker-002.py  deploy_ml-worker-003.py  deploy_storage-001.py  deploy_storage-002.py
numerai-pipeline/models/: uprootiny_trained_model.pkl
numerai-pipeline/numerai_uprootiny.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
numerai-pipeline/tests/: test_analytics.py  test_analytics_extended.py  test_coverage_boost.py.disabled  test_edge_cases.py.disabled  test_indexing.py  test_indexing_advanced.py.disabled  test_model_uprootiny.py
predict-o-matic-architecture/: Caddyfile  index.html  semantic-explorer.html  websocket-server.py
predict-o-matic-reader/: index.html
public/: index.html
resources/public/: index.html
resources/public/js/compiled/: strategy.js
src/strategy/: core.cljs
